// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeasingPerformanceReport renders baseline report correctly 1`] = `
<div
  className="report-section"
>
  <div
    className="section-header section-header--mt-sm"
  >
    <p
      className="section-header__title"
    >
      Leasing Performance
    </p>
  </div>
  <div
    className="box-row box-row--normal"
  >
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Leased
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            74%
          </span>
          <div
            className="large-box__content-extra"
          />
        </div>
        <span
          className="large-box__bottom-line"
        >
          <div>
            192
             Executed Leases (Out of
             
            260
            )
          </div>
          <div>
            201
             Total Units
          </div>
        </span>
        <span
          className="large-box__bottom-line"
        >
          
        </span>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Retention
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            71%
          </span>
          <div
            className="large-box__content-extra"
          />
        </div>
        <span
          className="large-box__bottom-line"
        >
          94 Notices to Renew (Out of 132 Resident Decisions)
        </span>
        <span
          className="large-box__bottom-line"
        >
          
        </span>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Occupied
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            71%
          </span>
          <div
            className="large-box__content-extra"
          />
        </div>
        <span
          className="large-box__bottom-line"
        >
          <div>
            185
             Occupied Units (Out of $
            260
            )
          </div>
          <div>
            201
             Total Units
          </div>
        </span>
        <span
          className="large-box__bottom-line"
        >
          
        </span>
      </div>
    </div>
  </div>
  <div
    className="lease-performance-report__detail-numbers"
  >
    <div
      className="box-row box-row--normal"
    >
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Lease Applications
              </span>
              
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    96
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Cancellations and Denials
              </span>
              
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    28
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Notices to Renew
              </span>
              
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    94
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Notices to Vacate
              </span>
              
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    38
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Move Ins
              </span>
              
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    72
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Move Outs
              </span>
              
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    36
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeasingPerformanceReport renders performance report correctly 1`] = `
<div
  className="report-section"
>
  <div
    className="section-header section-header--mt-sm"
  >
    <p
      className="section-header__title"
    >
      Leasing Performance
    </p>
  </div>
  <div
    className="box-row box-row--normal"
  >
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Leased
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            87%
          </span>
          <div
            className="large-box__content-extra"
          >
            <div
              className="large-box__content-graph"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-1-title victory-container-1-desc"
                  height={300}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 450 300"
                  width={450}
                >
                  <defs>
                    <linearGradient
                      id="-49270000"
                      x1="0%"
                      x2="0%"
                      y1="0%"
                      y2="100%"
                    >
                      <stop
                        offset="0%"
                        stopColor="#65FF00"
                        stopOpacity={1}
                      />
                      <stop
                        offset="19%"
                        stopColor="#65FF00"
                        stopOpacity={0.738}
                      />
                      <stop
                        offset="34%"
                        stopColor="#65FF00"
                        stopOpacity={0.541}
                      />
                      <stop
                        offset="47%"
                        stopColor="#65FF00"
                        stopOpacity={0.382}
                      />
                      <stop
                        offset="57%"
                        stopColor="#65FF00"
                        stopOpacity={0.278}
                      />
                      <stop
                        offset="65%"
                        stopColor="#65FF00"
                        stopOpacity={0.194}
                      />
                      <stop
                        offset="73%"
                        stopColor="#65FF00"
                        stopOpacity={0.126}
                      />
                      <stop
                        offset="80%"
                        stopColor="#65FF00"
                        stopOpacity={0.075}
                      />
                      <stop
                        offset="86%"
                        stopColor="#65FF00"
                        stopOpacity={0.042}
                      />
                      <stop
                        offset="91%"
                        stopColor="#65FF00"
                        stopOpacity={0.021}
                      />
                      <stop
                        offset="95%"
                        stopColor="#65FF00"
                        stopOpacity={0.008}
                      />
                      <stop
                        offset="98%"
                        stopColor="#65FF00"
                        stopOpacity={0.002}
                      />
                      <stop
                        offset="100%"
                        stopColor="#65FF00"
                        stopOpacity={0}
                      />
                    </linearGradient>
                  </defs>
                  <g
                    clipPath="url(#victory-clip-2)"
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <defs>
                      <clipPath
                        id="victory-clip-2"
                      >
                        <rect
                          height={300}
                          role="presentation"
                          shapeRendering="auto"
                          vectorEffect="non-scaling-stroke"
                          width={450}
                          x={0}
                          y={0}
                        />
                      </clipPath>
                    </defs>
                    <g>
                      <path
                        d="M0,39.25233644859816L10.714285714285714,38.31775700934582C21.428571428571427,37.38317757009347,42.857142857142854,35.514018691588795,64.28571428571428,32.242990654205606C85.71428571428571,28.971962616822413,107.14285714285712,24.29906542056072,128.57142857142856,21.028037383177537C149.99999999999997,17.75700934579436,171.42857142857142,15.887850467289695,192.8571428571428,14.018691588785023C214.28571428571425,12.149532710280349,235.7142857142857,10.280373831775668,257.1428571428571,8.411214953270994C278.57142857142856,6.542056074766322,300,4.672897196261658,321.4285714285714,4.672897196261658C342.85714285714283,4.672897196261658,364.2857142857142,6.542056074766322,385.7142857142857,6.074766355140156C407.1428571428571,5.60747663551399,428.5714285714286,2.803738317756995,439.2857142857143,1.4018691588784975L450,0L450,300L439.2857142857143,300C428.5714285714286,300,407.1428571428571,300,385.7142857142857,300C364.2857142857142,300,342.85714285714283,300,321.42857142857144,300C300,300,278.57142857142856,300,257.14285714285717,300C235.7142857142857,300,214.28571428571425,300,192.8571428571428,300C171.42857142857142,300,149.99999999999997,300,128.57142857142856,300C107.14285714285712,300,85.71428571428571,300,64.28571428571428,300C42.857142857142854,300,21.428571428571427,300,10.714285714285714,300L0,300Z"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "url(#-49270000)",
                            "stroke": "none",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                      <path
                        d="M0,39.25233644859816L10.714285714285714,38.31775700934582C21.428571428571427,37.38317757009347,42.857142857142854,35.514018691588795,64.28571428571428,32.242990654205606C85.71428571428571,28.971962616822413,107.14285714285712,24.29906542056072,128.57142857142856,21.028037383177537C149.99999999999997,17.75700934579436,171.42857142857142,15.887850467289695,192.8571428571428,14.018691588785023C214.28571428571425,12.149532710280349,235.7142857142857,10.280373831775668,257.1428571428571,8.411214953270994C278.57142857142856,6.542056074766322,300,4.672897196261658,321.4285714285714,4.672897196261658C342.85714285714283,4.672897196261658,364.2857142857142,6.542056074766322,385.7142857142857,6.074766355140156C407.1428571428571,5.60747663551399,428.5714285714286,2.803738317756995,439.2857142857143,1.4018691588784975L450,0"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "none",
                            "stroke": "#65FF00",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={300}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 450 300"
                    width={450}
                  />
                </div>
              </div>
            </div>
            <div
              className="large-box__content-delta"
            >
              <div
                className="delta-indicator"
              >
                <span
                  className="delta-indicator__delta"
                >
                  2pts
                </span>
                 
                <span
                  className="delta-indicator__arrow delta-indicator__trend-up"
                >
                  <svg
                    aria-hidden="true"
                    color="inherit"
                    focusable="false"
                    height={5}
                    role="presentation"
                    viewBox="0 0 10 5"
                    width={10}
                  >
                    <path
                      d="M5 0l5 5H0z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <span
          className="large-box__bottom-line"
        >
          <div>
            227
             Executed Leases (Out of
             
            260
            )
          </div>
          <div>
            201
             Total Units
          </div>
        </span>
        <span
          className="large-box__bottom-line"
        >
          Target: 95%
        </span>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Retention
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            60%
          </span>
          <div
            className="large-box__content-extra"
          >
            <div
              className="large-box__content-graph"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-3-title victory-container-3-desc"
                  height={300}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 450 300"
                  width={450}
                >
                  <defs>
                    <linearGradient
                      id="-49270000"
                      x1="0%"
                      x2="0%"
                      y1="0%"
                      y2="100%"
                    >
                      <stop
                        offset="0%"
                        stopColor="#FF7632"
                        stopOpacity={1}
                      />
                      <stop
                        offset="19%"
                        stopColor="#FF7632"
                        stopOpacity={0.738}
                      />
                      <stop
                        offset="34%"
                        stopColor="#FF7632"
                        stopOpacity={0.541}
                      />
                      <stop
                        offset="47%"
                        stopColor="#FF7632"
                        stopOpacity={0.382}
                      />
                      <stop
                        offset="57%"
                        stopColor="#FF7632"
                        stopOpacity={0.278}
                      />
                      <stop
                        offset="65%"
                        stopColor="#FF7632"
                        stopOpacity={0.194}
                      />
                      <stop
                        offset="73%"
                        stopColor="#FF7632"
                        stopOpacity={0.126}
                      />
                      <stop
                        offset="80%"
                        stopColor="#FF7632"
                        stopOpacity={0.075}
                      />
                      <stop
                        offset="86%"
                        stopColor="#FF7632"
                        stopOpacity={0.042}
                      />
                      <stop
                        offset="91%"
                        stopColor="#FF7632"
                        stopOpacity={0.021}
                      />
                      <stop
                        offset="95%"
                        stopColor="#FF7632"
                        stopOpacity={0.008}
                      />
                      <stop
                        offset="98%"
                        stopColor="#FF7632"
                        stopOpacity={0.002}
                      />
                      <stop
                        offset="100%"
                        stopColor="#FF7632"
                        stopOpacity={0}
                      />
                    </linearGradient>
                  </defs>
                  <g
                    clipPath="url(#victory-clip-4)"
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <defs>
                      <clipPath
                        id="victory-clip-4"
                      >
                        <rect
                          height={300}
                          role="presentation"
                          shapeRendering="auto"
                          vectorEffect="non-scaling-stroke"
                          width={450}
                          x={0}
                          y={0}
                        />
                      </clipPath>
                    </defs>
                    <g>
                      <path
                        d="M0,300L10.714285714285714,300C21.428571428571427,300,42.857142857142854,300,64.28571428571428,300C85.71428571428571,300,107.14285714285712,300,128.57142857142856,300C149.99999999999997,300,171.42857142857142,300,192.8571428571428,300C214.28571428571425,300,235.7142857142857,300,257.1428571428571,300C278.57142857142856,300,300,300,321.4285714285714,300C342.85714285714283,300,364.2857142857142,300,385.7142857142857,300C407.1428571428571,300,428.5714285714286,300,439.2857142857143,300L450,300L450,300L439.2857142857143,300C428.5714285714286,300,407.1428571428571,300,385.7142857142857,300C364.2857142857142,300,342.85714285714283,300,321.42857142857144,300C300,300,278.57142857142856,300,257.14285714285717,300C235.7142857142857,300,214.28571428571425,300,192.8571428571428,300C171.42857142857142,300,149.99999999999997,300,128.57142857142856,300C107.14285714285712,300,85.71428571428571,300,64.28571428571428,300C42.857142857142854,300,21.428571428571427,300,10.714285714285714,300L0,300Z"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "url(#-49270000)",
                            "stroke": "none",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                      <path
                        d="M0,300L10.714285714285714,300C21.428571428571427,300,42.857142857142854,300,64.28571428571428,300C85.71428571428571,300,107.14285714285712,300,128.57142857142856,300C149.99999999999997,300,171.42857142857142,300,192.8571428571428,300C214.28571428571425,300,235.7142857142857,300,257.1428571428571,300C278.57142857142856,300,300,300,321.4285714285714,300C342.85714285714283,300,364.2857142857142,300,385.7142857142857,300C407.1428571428571,300,428.5714285714286,300,439.2857142857143,300L450,300"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "none",
                            "stroke": "#FF7632",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={300}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 450 300"
                    width={450}
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          className="large-box__bottom-line"
        >
          7 Notices to Renew (Out of 11 Resident Decisions)
        </span>
        <span
          className="large-box__bottom-line"
        >
          Target: 63%
        </span>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Occupied
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            85%
          </span>
          <div
            className="large-box__content-extra"
          >
            <div
              className="large-box__content-graph"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-5-title victory-container-5-desc"
                  height={300}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 450 300"
                  width={450}
                >
                  <defs>
                    <linearGradient
                      id="-49270000"
                      x1="0%"
                      x2="0%"
                      y1="0%"
                      y2="100%"
                    >
                      <stop
                        offset="0%"
                        stopColor="#65FF00"
                        stopOpacity={1}
                      />
                      <stop
                        offset="19%"
                        stopColor="#65FF00"
                        stopOpacity={0.738}
                      />
                      <stop
                        offset="34%"
                        stopColor="#65FF00"
                        stopOpacity={0.541}
                      />
                      <stop
                        offset="47%"
                        stopColor="#65FF00"
                        stopOpacity={0.382}
                      />
                      <stop
                        offset="57%"
                        stopColor="#65FF00"
                        stopOpacity={0.278}
                      />
                      <stop
                        offset="65%"
                        stopColor="#65FF00"
                        stopOpacity={0.194}
                      />
                      <stop
                        offset="73%"
                        stopColor="#65FF00"
                        stopOpacity={0.126}
                      />
                      <stop
                        offset="80%"
                        stopColor="#65FF00"
                        stopOpacity={0.075}
                      />
                      <stop
                        offset="86%"
                        stopColor="#65FF00"
                        stopOpacity={0.042}
                      />
                      <stop
                        offset="91%"
                        stopColor="#65FF00"
                        stopOpacity={0.021}
                      />
                      <stop
                        offset="95%"
                        stopColor="#65FF00"
                        stopOpacity={0.008}
                      />
                      <stop
                        offset="98%"
                        stopColor="#65FF00"
                        stopOpacity={0.002}
                      />
                      <stop
                        offset="100%"
                        stopColor="#65FF00"
                        stopOpacity={0}
                      />
                    </linearGradient>
                  </defs>
                  <g
                    clipPath="url(#victory-clip-6)"
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <defs>
                      <clipPath
                        id="victory-clip-6"
                      >
                        <rect
                          height={300}
                          role="presentation"
                          shapeRendering="auto"
                          vectorEffect="non-scaling-stroke"
                          width={450}
                          x={0}
                          y={0}
                        />
                      </clipPath>
                    </defs>
                    <g>
                      <path
                        d="M0,300L10.714285714285714,300C21.428571428571427,300,42.857142857142854,300,64.28571428571428,300C85.71428571428571,300,107.14285714285712,300,128.57142857142856,300C149.99999999999997,300,171.42857142857142,300,192.8571428571428,300C214.28571428571425,300,235.7142857142857,300,257.1428571428571,300C278.57142857142856,300,300,300,321.4285714285714,300C342.85714285714283,300,364.2857142857142,300,385.7142857142857,300C407.1428571428571,300,428.5714285714286,300,439.2857142857143,300L450,300L450,300L439.2857142857143,300C428.5714285714286,300,407.1428571428571,300,385.7142857142857,300C364.2857142857142,300,342.85714285714283,300,321.42857142857144,300C300,300,278.57142857142856,300,257.14285714285717,300C235.7142857142857,300,214.28571428571425,300,192.8571428571428,300C171.42857142857142,300,149.99999999999997,300,128.57142857142856,300C107.14285714285712,300,85.71428571428571,300,64.28571428571428,300C42.857142857142854,300,21.428571428571427,300,10.714285714285714,300L0,300Z"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "url(#-49270000)",
                            "stroke": "none",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                      <path
                        d="M0,300L10.714285714285714,300C21.428571428571427,300,42.857142857142854,300,64.28571428571428,300C85.71428571428571,300,107.14285714285712,300,128.57142857142856,300C149.99999999999997,300,171.42857142857142,300,192.8571428571428,300C214.28571428571425,300,235.7142857142857,300,257.1428571428571,300C278.57142857142856,300,300,300,321.4285714285714,300C342.85714285714283,300,364.2857142857142,300,385.7142857142857,300C407.1428571428571,300,428.5714285714286,300,439.2857142857143,300L450,300"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "none",
                            "stroke": "#65FF00",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={300}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 450 300"
                    width={450}
                  />
                </div>
              </div>
            </div>
            <div
              className="large-box__content-delta"
            >
              <div
                className="delta-indicator"
              >
                <span
                  className="delta-indicator__delta"
                >
                  4pts
                </span>
                 
                <span
                  className="delta-indicator__arrow delta-indicator__trend-up"
                >
                  <svg
                    aria-hidden="true"
                    color="inherit"
                    focusable="false"
                    height={5}
                    role="presentation"
                    viewBox="0 0 10 5"
                    width={10}
                  >
                    <path
                      d="M5 0l5 5H0z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <span
          className="large-box__bottom-line"
        >
          <div>
            220
             Occupied Units (Out of $
            260
            )
          </div>
          <div>
            201
             Total Units
          </div>
        </span>
        <span
          className="large-box__bottom-line"
        >
          Target: 93%
        </span>
      </div>
    </div>
  </div>
  <div
    className="lease-performance-report__detail-numbers"
  >
    <div
      className="box-row box-row--normal"
    >
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Lease Applications
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 19
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    16
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        -2
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-down"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 5l5-5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Cancellations and Denials
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 4
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    3
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        -1
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-down"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 5l5-5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Notices to Renew
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 6
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    7
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        2
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-up"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 0l5 5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Notices to Vacate
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 3
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    5
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        -1
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-down"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 5l5-5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Move Ins
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 15
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    13
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        0
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-flat"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={10}
                          role="presentation"
                          viewBox="0 0 5 10"
                          width={5}
                        >
                          <path
                            d="M5.5 5l-5 5V0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Move Outs
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 3
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    4
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        1
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-up"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 0l5 5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeasingPerformanceReport renders with section items correctly 1`] = `
<div
  className="report-section"
>
  <div
    className="section-header section-header--mt-sm"
  >
    <p
      className="section-header__title"
    >
      Leasing Performance
    </p>
    <div
      className="section-header__extra"
    >
      <div>
        "I AM SECTION ITEMS"
      </div>
    </div>
  </div>
  <div
    className="box-row box-row--normal"
  >
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Leased
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            87%
          </span>
          <div
            className="large-box__content-extra"
          >
            <div
              className="large-box__content-graph"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-7-title victory-container-7-desc"
                  height={300}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 450 300"
                  width={450}
                >
                  <defs>
                    <linearGradient
                      id="-49270000"
                      x1="0%"
                      x2="0%"
                      y1="0%"
                      y2="100%"
                    >
                      <stop
                        offset="0%"
                        stopColor="#65FF00"
                        stopOpacity={1}
                      />
                      <stop
                        offset="19%"
                        stopColor="#65FF00"
                        stopOpacity={0.738}
                      />
                      <stop
                        offset="34%"
                        stopColor="#65FF00"
                        stopOpacity={0.541}
                      />
                      <stop
                        offset="47%"
                        stopColor="#65FF00"
                        stopOpacity={0.382}
                      />
                      <stop
                        offset="57%"
                        stopColor="#65FF00"
                        stopOpacity={0.278}
                      />
                      <stop
                        offset="65%"
                        stopColor="#65FF00"
                        stopOpacity={0.194}
                      />
                      <stop
                        offset="73%"
                        stopColor="#65FF00"
                        stopOpacity={0.126}
                      />
                      <stop
                        offset="80%"
                        stopColor="#65FF00"
                        stopOpacity={0.075}
                      />
                      <stop
                        offset="86%"
                        stopColor="#65FF00"
                        stopOpacity={0.042}
                      />
                      <stop
                        offset="91%"
                        stopColor="#65FF00"
                        stopOpacity={0.021}
                      />
                      <stop
                        offset="95%"
                        stopColor="#65FF00"
                        stopOpacity={0.008}
                      />
                      <stop
                        offset="98%"
                        stopColor="#65FF00"
                        stopOpacity={0.002}
                      />
                      <stop
                        offset="100%"
                        stopColor="#65FF00"
                        stopOpacity={0}
                      />
                    </linearGradient>
                  </defs>
                  <g
                    clipPath="url(#victory-clip-8)"
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <defs>
                      <clipPath
                        id="victory-clip-8"
                      >
                        <rect
                          height={300}
                          role="presentation"
                          shapeRendering="auto"
                          vectorEffect="non-scaling-stroke"
                          width={450}
                          x={0}
                          y={0}
                        />
                      </clipPath>
                    </defs>
                    <g>
                      <path
                        d="M0,39.25233644859816L10.714285714285714,38.31775700934582C21.428571428571427,37.38317757009347,42.857142857142854,35.514018691588795,64.28571428571428,32.242990654205606C85.71428571428571,28.971962616822413,107.14285714285712,24.29906542056072,128.57142857142856,21.028037383177537C149.99999999999997,17.75700934579436,171.42857142857142,15.887850467289695,192.8571428571428,14.018691588785023C214.28571428571425,12.149532710280349,235.7142857142857,10.280373831775668,257.1428571428571,8.411214953270994C278.57142857142856,6.542056074766322,300,4.672897196261658,321.4285714285714,4.672897196261658C342.85714285714283,4.672897196261658,364.2857142857142,6.542056074766322,385.7142857142857,6.074766355140156C407.1428571428571,5.60747663551399,428.5714285714286,2.803738317756995,439.2857142857143,1.4018691588784975L450,0L450,300L439.2857142857143,300C428.5714285714286,300,407.1428571428571,300,385.7142857142857,300C364.2857142857142,300,342.85714285714283,300,321.42857142857144,300C300,300,278.57142857142856,300,257.14285714285717,300C235.7142857142857,300,214.28571428571425,300,192.8571428571428,300C171.42857142857142,300,149.99999999999997,300,128.57142857142856,300C107.14285714285712,300,85.71428571428571,300,64.28571428571428,300C42.857142857142854,300,21.428571428571427,300,10.714285714285714,300L0,300Z"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "url(#-49270000)",
                            "stroke": "none",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                      <path
                        d="M0,39.25233644859816L10.714285714285714,38.31775700934582C21.428571428571427,37.38317757009347,42.857142857142854,35.514018691588795,64.28571428571428,32.242990654205606C85.71428571428571,28.971962616822413,107.14285714285712,24.29906542056072,128.57142857142856,21.028037383177537C149.99999999999997,17.75700934579436,171.42857142857142,15.887850467289695,192.8571428571428,14.018691588785023C214.28571428571425,12.149532710280349,235.7142857142857,10.280373831775668,257.1428571428571,8.411214953270994C278.57142857142856,6.542056074766322,300,4.672897196261658,321.4285714285714,4.672897196261658C342.85714285714283,4.672897196261658,364.2857142857142,6.542056074766322,385.7142857142857,6.074766355140156C407.1428571428571,5.60747663551399,428.5714285714286,2.803738317756995,439.2857142857143,1.4018691588784975L450,0"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "none",
                            "stroke": "#65FF00",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={300}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 450 300"
                    width={450}
                  />
                </div>
              </div>
            </div>
            <div
              className="large-box__content-delta"
            >
              <div
                className="delta-indicator"
              >
                <span
                  className="delta-indicator__delta"
                >
                  2pts
                </span>
                 
                <span
                  className="delta-indicator__arrow delta-indicator__trend-up"
                >
                  <svg
                    aria-hidden="true"
                    color="inherit"
                    focusable="false"
                    height={5}
                    role="presentation"
                    viewBox="0 0 10 5"
                    width={10}
                  >
                    <path
                      d="M5 0l5 5H0z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <span
          className="large-box__bottom-line"
        >
          <div>
            227
             Executed Leases (Out of
             
            260
            )
          </div>
          <div>
            201
             Total Units
          </div>
        </span>
        <span
          className="large-box__bottom-line"
        >
          Target: 95%
        </span>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Retention
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            60%
          </span>
          <div
            className="large-box__content-extra"
          >
            <div
              className="large-box__content-graph"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-9-title victory-container-9-desc"
                  height={300}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 450 300"
                  width={450}
                >
                  <defs>
                    <linearGradient
                      id="-49270000"
                      x1="0%"
                      x2="0%"
                      y1="0%"
                      y2="100%"
                    >
                      <stop
                        offset="0%"
                        stopColor="#FF7632"
                        stopOpacity={1}
                      />
                      <stop
                        offset="19%"
                        stopColor="#FF7632"
                        stopOpacity={0.738}
                      />
                      <stop
                        offset="34%"
                        stopColor="#FF7632"
                        stopOpacity={0.541}
                      />
                      <stop
                        offset="47%"
                        stopColor="#FF7632"
                        stopOpacity={0.382}
                      />
                      <stop
                        offset="57%"
                        stopColor="#FF7632"
                        stopOpacity={0.278}
                      />
                      <stop
                        offset="65%"
                        stopColor="#FF7632"
                        stopOpacity={0.194}
                      />
                      <stop
                        offset="73%"
                        stopColor="#FF7632"
                        stopOpacity={0.126}
                      />
                      <stop
                        offset="80%"
                        stopColor="#FF7632"
                        stopOpacity={0.075}
                      />
                      <stop
                        offset="86%"
                        stopColor="#FF7632"
                        stopOpacity={0.042}
                      />
                      <stop
                        offset="91%"
                        stopColor="#FF7632"
                        stopOpacity={0.021}
                      />
                      <stop
                        offset="95%"
                        stopColor="#FF7632"
                        stopOpacity={0.008}
                      />
                      <stop
                        offset="98%"
                        stopColor="#FF7632"
                        stopOpacity={0.002}
                      />
                      <stop
                        offset="100%"
                        stopColor="#FF7632"
                        stopOpacity={0}
                      />
                    </linearGradient>
                  </defs>
                  <g
                    clipPath="url(#victory-clip-10)"
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <defs>
                      <clipPath
                        id="victory-clip-10"
                      >
                        <rect
                          height={300}
                          role="presentation"
                          shapeRendering="auto"
                          vectorEffect="non-scaling-stroke"
                          width={450}
                          x={0}
                          y={0}
                        />
                      </clipPath>
                    </defs>
                    <g>
                      <path
                        d="M0,300L10.714285714285714,300C21.428571428571427,300,42.857142857142854,300,64.28571428571428,300C85.71428571428571,300,107.14285714285712,300,128.57142857142856,300C149.99999999999997,300,171.42857142857142,300,192.8571428571428,300C214.28571428571425,300,235.7142857142857,300,257.1428571428571,300C278.57142857142856,300,300,300,321.4285714285714,300C342.85714285714283,300,364.2857142857142,300,385.7142857142857,300C407.1428571428571,300,428.5714285714286,300,439.2857142857143,300L450,300L450,300L439.2857142857143,300C428.5714285714286,300,407.1428571428571,300,385.7142857142857,300C364.2857142857142,300,342.85714285714283,300,321.42857142857144,300C300,300,278.57142857142856,300,257.14285714285717,300C235.7142857142857,300,214.28571428571425,300,192.8571428571428,300C171.42857142857142,300,149.99999999999997,300,128.57142857142856,300C107.14285714285712,300,85.71428571428571,300,64.28571428571428,300C42.857142857142854,300,21.428571428571427,300,10.714285714285714,300L0,300Z"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "url(#-49270000)",
                            "stroke": "none",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                      <path
                        d="M0,300L10.714285714285714,300C21.428571428571427,300,42.857142857142854,300,64.28571428571428,300C85.71428571428571,300,107.14285714285712,300,128.57142857142856,300C149.99999999999997,300,171.42857142857142,300,192.8571428571428,300C214.28571428571425,300,235.7142857142857,300,257.1428571428571,300C278.57142857142856,300,300,300,321.4285714285714,300C342.85714285714283,300,364.2857142857142,300,385.7142857142857,300C407.1428571428571,300,428.5714285714286,300,439.2857142857143,300L450,300"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "none",
                            "stroke": "#FF7632",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={300}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 450 300"
                    width={450}
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          className="large-box__bottom-line"
        >
          7 Notices to Renew (Out of 11 Resident Decisions)
        </span>
        <span
          className="large-box__bottom-line"
        >
          Target: 63%
        </span>
      </div>
    </div>
    <div
      className="child-wrapper"
      style={
        Object {
          "width": "33.33333%",
        }
      }
    >
      <div
        className="panel panel--default large-box"
      >
        <span
          className="large-box__top-line"
        >
          Occupied
        </span>
        <div
          className="large-box__content"
        >
          <span
            className="large-box__content-value"
          >
            85%
          </span>
          <div
            className="large-box__content-extra"
          >
            <div
              className="large-box__content-graph"
            >
              <div
                className="VictoryContainer"
                style={
                  Object {
                    "height": "100%",
                    "pointerEvents": "none",
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-labelledby="victory-container-11-title victory-container-11-desc"
                  height={300}
                  role="img"
                  style={
                    Object {
                      "height": "100%",
                      "pointerEvents": "all",
                      "width": "100%",
                    }
                  }
                  viewBox="0 0 450 300"
                  width={450}
                >
                  <defs>
                    <linearGradient
                      id="-49270000"
                      x1="0%"
                      x2="0%"
                      y1="0%"
                      y2="100%"
                    >
                      <stop
                        offset="0%"
                        stopColor="#65FF00"
                        stopOpacity={1}
                      />
                      <stop
                        offset="19%"
                        stopColor="#65FF00"
                        stopOpacity={0.738}
                      />
                      <stop
                        offset="34%"
                        stopColor="#65FF00"
                        stopOpacity={0.541}
                      />
                      <stop
                        offset="47%"
                        stopColor="#65FF00"
                        stopOpacity={0.382}
                      />
                      <stop
                        offset="57%"
                        stopColor="#65FF00"
                        stopOpacity={0.278}
                      />
                      <stop
                        offset="65%"
                        stopColor="#65FF00"
                        stopOpacity={0.194}
                      />
                      <stop
                        offset="73%"
                        stopColor="#65FF00"
                        stopOpacity={0.126}
                      />
                      <stop
                        offset="80%"
                        stopColor="#65FF00"
                        stopOpacity={0.075}
                      />
                      <stop
                        offset="86%"
                        stopColor="#65FF00"
                        stopOpacity={0.042}
                      />
                      <stop
                        offset="91%"
                        stopColor="#65FF00"
                        stopOpacity={0.021}
                      />
                      <stop
                        offset="95%"
                        stopColor="#65FF00"
                        stopOpacity={0.008}
                      />
                      <stop
                        offset="98%"
                        stopColor="#65FF00"
                        stopOpacity={0.002}
                      />
                      <stop
                        offset="100%"
                        stopColor="#65FF00"
                        stopOpacity={0}
                      />
                    </linearGradient>
                  </defs>
                  <g
                    clipPath="url(#victory-clip-12)"
                    style={
                      Object {
                        "height": "100%",
                        "width": "100%",
                      }
                    }
                  >
                    <defs>
                      <clipPath
                        id="victory-clip-12"
                      >
                        <rect
                          height={300}
                          role="presentation"
                          shapeRendering="auto"
                          vectorEffect="non-scaling-stroke"
                          width={450}
                          x={0}
                          y={0}
                        />
                      </clipPath>
                    </defs>
                    <g>
                      <path
                        d="M0,300L10.714285714285714,300C21.428571428571427,300,42.857142857142854,300,64.28571428571428,300C85.71428571428571,300,107.14285714285712,300,128.57142857142856,300C149.99999999999997,300,171.42857142857142,300,192.8571428571428,300C214.28571428571425,300,235.7142857142857,300,257.1428571428571,300C278.57142857142856,300,300,300,321.4285714285714,300C342.85714285714283,300,364.2857142857142,300,385.7142857142857,300C407.1428571428571,300,428.5714285714286,300,439.2857142857143,300L450,300L450,300L439.2857142857143,300C428.5714285714286,300,407.1428571428571,300,385.7142857142857,300C364.2857142857142,300,342.85714285714283,300,321.42857142857144,300C300,300,278.57142857142856,300,257.14285714285717,300C235.7142857142857,300,214.28571428571425,300,192.8571428571428,300C171.42857142857142,300,149.99999999999997,300,128.57142857142856,300C107.14285714285712,300,85.71428571428571,300,64.28571428571428,300C42.857142857142854,300,21.428571428571427,300,10.714285714285714,300L0,300Z"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "url(#-49270000)",
                            "stroke": "none",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                      <path
                        d="M0,300L10.714285714285714,300C21.428571428571427,300,42.857142857142854,300,64.28571428571428,300C85.71428571428571,300,107.14285714285712,300,128.57142857142856,300C149.99999999999997,300,171.42857142857142,300,192.8571428571428,300C214.28571428571425,300,235.7142857142857,300,257.1428571428571,300C278.57142857142856,300,300,300,321.4285714285714,300C342.85714285714283,300,364.2857142857142,300,385.7142857142857,300C407.1428571428571,300,428.5714285714286,300,439.2857142857143,300L450,300"
                        role="presentation"
                        shapeRendering="auto"
                        style={
                          Object {
                            "fill": "none",
                            "stroke": "#65FF00",
                            "strokeWidth": "7px",
                            "width": 4,
                          }
                        }
                      />
                    </g>
                  </g>
                </svg>
                <div
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                      "zIndex": 99,
                    }
                  }
                >
                  <svg
                    height={300}
                    style={
                      Object {
                        "height": "100%",
                        "overflow": "visible",
                        "width": "100%",
                      }
                    }
                    viewBox="0 0 450 300"
                    width={450}
                  />
                </div>
              </div>
            </div>
            <div
              className="large-box__content-delta"
            >
              <div
                className="delta-indicator"
              >
                <span
                  className="delta-indicator__delta"
                >
                  4pts
                </span>
                 
                <span
                  className="delta-indicator__arrow delta-indicator__trend-up"
                >
                  <svg
                    aria-hidden="true"
                    color="inherit"
                    focusable="false"
                    height={5}
                    role="presentation"
                    viewBox="0 0 10 5"
                    width={10}
                  >
                    <path
                      d="M5 0l5 5H0z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <span
          className="large-box__bottom-line"
        >
          <div>
            220
             Occupied Units (Out of $
            260
            )
          </div>
          <div>
            201
             Total Units
          </div>
        </span>
        <span
          className="large-box__bottom-line"
        >
          Target: 93%
        </span>
      </div>
    </div>
  </div>
  <div
    className="lease-performance-report__detail-numbers"
  >
    <div
      className="box-row box-row--normal"
    >
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Lease Applications
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 19
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    16
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        -2
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-down"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 5l5-5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Cancellations and Denials
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 4
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    3
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        -1
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-down"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 5l5-5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Notices to Renew
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 6
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    7
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        2
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-up"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 0l5 5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Notices to Vacate
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 3
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    5
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        -1
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-down"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 5l5-5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="child-wrapper"
        style={
          Object {
            "width": "33.33333%",
          }
        }
      >
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Move Ins
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 15
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    13
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        0
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-flat"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={10}
                          role="presentation"
                          viewBox="0 0 5 10"
                          width={5}
                        >
                          <path
                            d="M5.5 5l-5 5V0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="box-column__child-wrapper"
        >
          <div
            className="panel panel--default small-box"
          >
            <div
              className="small-box__labels"
            >
              <span
                className="small-box__labels__name"
              >
                Move Outs
              </span>
              <span
                className="small-box__labels__detail"
              >
                Target: 3
              </span>
            </div>
            <div
              className="small-box__outer-content"
            >
              <div
                className="small-box__inner-content"
              >
                <span
                  className="delta-layout"
                >
                  <span
                    className="formatted-value-with-symbol"
                  >
                    4
                  </span>
                  <span
                    className="delta-layout__section"
                  >
                    <div
                      className="delta-indicator"
                    >
                      <span
                        className="delta-indicator__delta"
                      >
                        1
                      </span>
                       
                      <span
                        className="delta-indicator__arrow delta-indicator__trend-up"
                      >
                        <svg
                          aria-hidden="true"
                          color="inherit"
                          focusable="false"
                          height={5}
                          role="presentation"
                          viewBox="0 0 10 5"
                          width={10}
                        >
                          <path
                            d="M5 0l5 5H0z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
